updated the code

--- a/public/index.html
+++ b/public/index.html
@@ -40,11 +40,11 @@
         <meta name="author" content="Mark Tan" />
         <meta
             name="description"
-            content="Greetings, I'm Mark Tan, a Web Developer based from the Philippines. I love all things technical. Talk soon!"
+            content="Greetings, I'm Saurabh Tan, a Go Developer based from the India. I love all things technical. Talk soon!"
         />
         <meta
             name="keywords"
-            content="personal,website,portfolio,template,kit,mark,tan,taniyow,webdev,web,developer,angeles,philippines,react,github,linkedin,google,gitlab,telegram,material,design,ui,webapp"
+            content="golang, go"
         />
         <meta property="og:image" content="%PUBLIC_URL%/social-image.png" />
         <meta property="og:image:type" content="image/png" />
